--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -25,7 +25,7 @@
   },
  "hero": {
   "tagline": "✦  شریعت • طریقت • سیاست ✦",
-  "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَة خلیفه صاحب ارغندی (رح)",
+  "title": "Anwar ul-Uloom al-Islamiyyah",
   "subtitle": "د نوي نسلونو روزنه په اسلامي نظریه او روحیه",
   "description": "زموږ مدرسه د شریعت، طریقت او سیاست په رڼا کې د اسلامي روزنې الهامي مرکز دی. موږ زده‌کوونکي د علم، معنویت او نبوي اخلاقو پر بنسټ روزو، څو د اسلامي فکر او عمل رښتیني لارویان شي. هدف مو دا دی چې هر زده‌کوونکی د خپل ځان، ټولنې او امت د روښانه راتلونکي لپاره یو باایمانه او اغېزمن فرد جوړ شي. ",
   "viewCourses": "کورسونه وګورئ",
