Refactor API error handling and remove fallback data usage; update course fetching logic to handle errors and loading states in the Online Courses page.

--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -510,7 +510,7 @@
     },
    "iftah": {
   "title":"دارالافتاء",
-  "subtitle": "په دارالافتاح کې خپلې دیني پوښتنې وکړئ او د شرعي لارښوونو رڼا تر لاسه کړئ"
+  "subtitle": "په دارالافتاء کې خپلې دیني پوښتنې وکړئ او د شرعي لارښوونو رڼا تر لاسه کړئ"
 },
     "sanad": {
       "title": "شجره طریقه نقشبندیه",
